--- a/course/01_InstallingRPackages/homeworks/KenQuayle/Week1_TakeHome.qmd
+++ b/course/01_InstallingRPackages/homeworks/KenQuayle/Week1_TakeHome.qmd
@@ -4,25 +4,25 @@ embed-resources: true
 format: html
 ---
 
-# Problem 1
+## Problem 1
 
 Per the documentation for PeacoQC, the general pipeline contains the following functions:
-* system.file()
-* read.FCS()
-* RemoveMargins()
-* compensate()
-* transform()
-* PeacoQC()
-* PlotPeacoQC()
-* PeacoQCHeatmap()
+system.file()
+read.FCS()
+RemoveMargins()
+compensate()
+transform()
+PeacoQC()
+PlotPeacoQC()
+PeacoQCHeatmap()
 
-# Problem 2
+## Problem 2
 
 There are 69 flow cytometry packages on Bioconductor, with the most being maintained by Mike Jiang (7).
 
 It would be good to look into cytoMEM and openCyto later in the course.
 
-# Problem 3
+## Problem 3
 
 The "pak" package differs from the regular installation process in that the same function pak::pkg_install() works for packages hosted on CRAN, Bioconductor, and GitHub. It also more clearly shows which packages will be downloaded and installed and the size of the file. 
 
